syntax = "proto3";

package grpcserver;

option go_package = "grpc/proto";

message Link {
  string url = 1;
}

message ShortLink {
  string shortlink = 1;
}

message Status {
  int32 status = 1;
}

message PingDBRequest {
}

message PingDBResponse {
  Status status = 1;
}

message User {
  string token = 1;
  int32 id = 2;
}

message ShortenRequest {
  Link link = 1;
  User user = 2;
}

message ShortenResponse {
  ShortLink shortlink = 1;
  Status status = 2;
  User user = 3;
}

message ShortenJSONRequest {
  string json = 1;
  User user = 2;
}

message ShortenJSONResponse {
  string json = 1;
  Status status = 2;
  User user = 3;
}

message ShortenBatchJSONRequest {
  string json = 1;
  User user = 2;
}

message ShortenBatchJSONResponse {
  string json = 1;
  Status status = 2;
  User user = 3;
}

message ExpandRequest {
  ShortLink shortlink = 1;
}

message ExpandResponse {
  Link link = 1;
  Status status = 2;
  User user = 3;
}

message ExpandUserURLSRequest {
  User user = 1;
}

message ExpandUserURLSResponse {
  string json = 1;
  Status status = 2;
  User user = 3;
}

message DeleteUserURLSRequest {
  User user = 1;
  string json = 2;
}

message DeleteUserURLSResponse {
  Status status = 1;
}

message GetServerStatsRequest {
}

message GetServerStatsResponse {
  string json = 1;
  Status status = 2;
}

service ShortURL {
  rpc PingDB(PingDBRequest) returns (PingDBResponse);
  rpc Shorten(ShortenRequest) returns (ShortenResponse);
  rpc ShortenJSON(ShortenJSONRequest) returns (ShortenJSONResponse);
  rpc ShortenBatchJSON(ShortenBatchJSONRequest) returns (ShortenBatchJSONResponse);
  rpc Expand(ExpandRequest) returns (ExpandResponse);
  rpc ExpandUserURLS(ExpandUserURLSRequest) returns (ExpandUserURLSResponse);
  rpc DeleteUserURLS(DeleteUserURLSRequest) returns (DeleteUserURLSResponse);
  rpc GetServerStats(GetServerStatsRequest) returns (GetServerStatsResponse);
}

